ThemeToggler hover in dark mode fix

--- a/src/styles/components/_themetoggler.scss
+++ b/src/styles/components/_themetoggler.scss
@@ -12,8 +12,10 @@
       fill: $dark-secondaryColor;
     }
   }
+}
 
-  &.dark {
+body.dark {
+  .theme-toggler {
     &:hover {
       svg {
         fill: $dark-primaryColor;
